force-app/main/default/objects/Order/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <formula>TotalAmount +  Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>総合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>