force-app/main/default/objects/Order/fields/OrderComfirmationIssueDate__c.field-meta.xml
<CustomField>
    <fullName>OrderComfirmationIssueDate__c</fullName>
    <label>注文請書発行日</label>
    <type>Date</type>
</CustomField>