force-app/main/default/objects/Order/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>消費税</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>