force-app/main/default/objects/Order/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <label>消費税タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxType</valueSetName>
    </valueSet>
</CustomField>